fixed error to maybe fix problem with picture not showing up

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1384,7 +1384,7 @@
 
 		.image.featured {
 			display: block;
-			width: 100%
+			width: 100%;
 			margin: 0 0 2.5em 0;
 		}
 
